# JniDemo

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: hancnetsdk.h
app/src/main/java/com/wkq/jnidemo/: JniUtil.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/wkq/jnidemo/: ExampleUnitTest.kt
